--- a/my_project/templates/index.html
+++ b/my_project/templates/index.html
@@ -4,27 +4,29 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/static/css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Home</title>
 </head>
 
-<body>
+<body class="table">
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="/">Home</a>
     <a href="Loans">Loans</a>
     <a href="Books">Books</a>
     <a href="Customers">Customers</a>
   </div>
 
-  <div class="content">
+  <div class="content" style="margin: 25px 50px 75px 100px;">
     <h2>Welcome to My Library</h2>
     <p>Welcome to our library management system. Here, you can easily manage your library's collection of books, loans,
       and customers.</p>
 
     <h3>Available Actions</h3>
     <ul>
-      <li><a href="Loans">Manage Loans</a> - View and manage loans made by customers.</li>
-      <li><a href="Books">Manage Books</a> - Add, edit, or remove books from your library's collection.</li>
-      <li><a href="Customers">Manage Customers</a> - Add and update customer information.</li>
+      <li><a href="Loans">Manage Loans</a> - View and manage loans.</li>
+      <li><a href="Books">Manage Books</a> - Loan a book. Add, edit, or remove books from your library's collection.</li>
+      <li><a href="Customers">Manage Customers</a> - Add, delete and update customer information.</li>
     </ul>
 
     <h3>Contact Us</h3>
