--- a/my_project/templates/Loans.html
+++ b/my_project/templates/Loans.html
@@ -30,10 +30,9 @@
 
   <div style="margin-left:85px;">
     <h2>Manage loans</h2>
-    <!-- [To loan a book go to <a href="Books">Books]</a></div> -->
   </div>
 
-  <input id="searchInput" style="margin-left: 85px;" type="text" placeholder="Enter book title to search">
+  <input id="searchInput" style="margin-left: 85px;" type="text" placeholder="Enter book to search">
   <div id="searchButton"></div>
 
   <div>
