--- a/my_project/templates/Loans.html
+++ b/my_project/templates/Loans.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="/static/js/loans.js"></script>
+  <script src="static/js/utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <title>Loans</title>
 </head>
