--- a/my_project/templates/customers.html
+++ b/my_project/templates/customers.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/static/js/customers.js"></script>
+    <script src="static/js/utils.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Customers</title>
 </head>
@@ -57,7 +58,7 @@
             <label for="customerID">New customerID:</label>
             <input type="text" id="newCustomerID" name="customerID"><br>
 
-            <label for="name">New name:</label>
+            <label for="Name">New name:</label>
             <input type="text" id="newName" name="Name"><br>
 
             <label for="age">New age:</label>
