--- a/frontend/templates/Loans.html
+++ b/frontend/templates/Loans.html
@@ -33,8 +33,7 @@
     <h2>Manage loans</h2>
   </div>
 
-  <input id="searchInput" style="margin-left: 85px;" type="text" placeholder="Enter book to search">
-  <div id="searchButton"></div>
+  <div id="searchDiv"></div>
 
   <div>
     <table style="margin-left: 85px;" class="table" id="loansTable"></table>
