--- a/frontend/templates/books.html
+++ b/frontend/templates/books.html
@@ -27,8 +27,7 @@
         <h2>Manage books</h2>
     </div>
 
-    <input type="text" id="searchInput" placeholder="Enter name to search" style="margin-left: 10px;">
-    <button onclick="search()">Search</button>
+    <input type="text" id="searchInput" placeholder="Enter name to search" onkeypress="search()" style="margin-left: 10px;">
     <button onclick="getAllBooks()">Cancel</button><br><br>
     <button id="toggleFormButton" style="margin-left: 10px;">Add New Book</button>
 
